Uniformisation de la navigation sur toutes les pages

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <h4>Contact</h4>
                     <p>📍 Madagascar</p>
                     <p>📞 +XXX XX XX XXX XX</p>
-                    <p>✉️ contact@f3ms.org</p>
+                    <p>✉️ associationf3ms@proton.me</p>
                 </div>
 
                 <div>
