--- a/donate.html
+++ b/donate.html
@@ -19,13 +19,31 @@
         .container { max-width: 1200px; margin: auto; padding: 0 20px; }
 
         /* NAVBAR (identique à vos pages) */
-        .navbar { background: #fff; padding: 15px 0; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
-        .nav-flex { display: flex; justify-content: space-between; align-items: center; }
+        .navbar {
+            background: #fff;
+            padding: 15px 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        .nav-flex {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         .logo-text { font-weight: 700; color: var(--blue); font-size: 1.5rem; }
+        
         .nav-links { display: flex; gap: 25px; align-items: center; }
-        .nav-links a { font-weight: 600; color: var(--dark); }
+        .nav-links a { font-weight: 600; color: var(--dark); font-size: 0.95em; }
         .nav-links a:hover { color: var(--blue); }
-        .nav-cta { background: var(--yellow); padding: 10px 20px; border-radius: 25px; color: var(--dark) !important; }
+        .nav-cta {
+            background: var(--yellow);
+            padding: 10px 20px;
+            border-radius: 25px;
+            color: var(--dark) !important;
+        }
+        .nav-cta:hover { background: #e0aa00; transform: translateY(-2px); }
 
         /* HERO */
         .page-header {
@@ -88,13 +106,12 @@
     <nav class="navbar">
         <div class="container nav-flex">
             <a href="index.html" class="logo-text">F3MS Association</a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="our_actions.html">Our Actions</a></li>
-                <li><a href="explore_our_project.html">Projects</a></li>
-                <li><a href="impact.html">Impact</a></li>
-                <li><a href="donate.html" class="nav-cta">Donate</a></li>
-            </ul>
+            	<ul class="nav-links">
+    		<li><a href="index.html">Home</a></li>
+    		<li><a href="our_actions.html">Our Actions</a></li>
+    		<li><a href="impact.html">Impact</a></li>
+    		<li><a href="donate.html" class="nav-cta">Donate</a></li>
+	    </ul>
         </div>
     </nav>
 
