--- a/our_actions.html
+++ b/our_actions.html
@@ -58,7 +58,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="our_actions.html" style="color: var(--blue);">Our Actions</a></li>
-                <li><a href="explore_our_project.html">Our Projects</a></li>
+                <li><a href="explore_our_project.html">Impact</a></li>
                 <li><a href="donate.html" class="nav-cta">Donate</a></li>
             </ul>
         </div>
