--- a/donate.html
+++ b/donate.html
@@ -106,12 +106,12 @@
     <nav class="navbar">
         <div class="container nav-flex">
             <a href="index.html" class="logo-text">F3MS Association</a>
-            	<ul class="nav-links">
+            	<ul class="nav-links" style="list-style: none;">
     		<li><a href="index.html">Home</a></li>
     		<li><a href="our_actions.html">Our Actions</a></li>
     		<li><a href="impact.html">Impact</a></li>
     		<li><a href="donate.html" class="nav-cta">Donate</a></li>
-	    </ul>
+	    		</ul>
         </div>
     </nav>
 
